fix(breadcrumb): enable ellipsis for long current item and prevent layout break

--- a/ex4/src/scss/abstracts/_mixins.scss
+++ b/ex4/src/scss/abstracts/_mixins.scss
@@ -1,11 +1,13 @@
 @use "~/scss/abstracts/variables" as v;
 
-@mixin line-clamp($lines: 3) {
+@mixin line-clamp($lines: 2) {
   display: -webkit-box;
+
+  /* autoprefixer: ignore next */
   -webkit-box-orient: vertical;
+
   -webkit-line-clamp: $lines;
   overflow: hidden;
-  min-width: 0;
 }
 
 @mixin icon-bg($url, $width: 16px, $height: 16px) {
