--- a/ex4/src/scss/base/_utilities.scss
+++ b/ex4/src/scss/base/_utilities.scss
@@ -38,6 +38,10 @@
   margin-bottom: 28px;
 }
 
+.u-mb-40 {
+  margin-bottom: 40px !important;
+}
+
 .u-w-full {
   width: 100%;
 }
